# notwithout.help

./: .gitattributes  README.md  ]  package-lock.json  package.json
.github/workflows/: deploy.yaml  worker.yaml
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/public/: _headers  robots.txt
client/src/: App.vue  api.ts  auth.ts  crypto.ts  encoding.ts  forms.ts  injectKeys.ts  main.ts  orgRoles.ts  state.ts  types.ts  vars.ts
client/src/assets/: default-roles.json  main.css
client/src/components/: CreateSecretLinkModal.vue  ErrorCard.vue  FormAdmonitions.vue  FormBody.vue  FormBodyInput.vue  FormBuilder.vue  FormLinks.vue  FormResponse.vue  LinkAdmonition.vue  PasswordChangeModal.vue  PasswordInputModal.vue  ResponseForm.vue  RoleList.vue  SecretLink.vue  SecretLinkAdmonition.vue  SecretLinkList.vue  SecretLinkListItem.vue  SecretLinkListing.vue  SecretLinkPasswordHelpDialog.vue  SecretLinks.vue  ShareLinkAdmonition.vue  ValidationMessage.vue
client/src/composables/: useAccessToken.ts  useForm.ts  useIsSecretLinkProtected.ts  useLink.ts  usePrivatePrimaryKey.ts  useSecretLink.ts  useSecretLinkKey.ts  useSecretLinkValidator.ts
client/src/router/: index.ts
client/src/views/: ContactView.vue  EditView.vue  FormView.vue  HomeView.vue  NotFoundView.vue  OrganizeView.vue  ResponsesView.vue  SecurityView.vue  TipsView.vue
docs/: custom-roles.md  diagrams.gaphor  security-whitepaper.md  security.md
infra/: .terraform.lock.hcl  access.tf  d1.tf  dns.tf  kv.tf  main.tf  pages.tf  zone.tf
src/: main.ts
src/assets/: main.css
tests/: .gitignore  Cargo.toml
tests/src/: challenge.rs  cli.rs  command.rs  lib.rs  main.rs
tests/tests/: auth.rs  form.rs  forms.rs  submissions.rs
tests/tests/common/: encoding.rs  endpoints.rs  http.rs  matchers.rs  mod.rs
worker/: .dev.vars  Cargo.toml  wrangler.toml
worker/migrations/: 0001_schema.sql  0002_form_template_version.sql  0003_secret_link_passwords.sql  0004_unique_client_key_ids.sql
worker/src/: api.rs  auth.rs  config.rs  cors.rs  crypt.rs  keys.rs  lib.rs  models.rs  router.rs  secrets.rs  store.rs
