[package]
name = "not-without-tests"
version = "0.1.0"
edition = "2021"

  [package.metadata.release]
  release = false

[lib]
name = "notwithouttests"
path = "src/lib.rs"

[[bin]]
name = "notwithouttests"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.93"
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["rt", "macros"] }
xpct = "0.5.1"
