[package]
name = "notwithouthelp"
version = "0.1.0"
edition = "2021"
authors = ["Lark <lark@lark.gay>"]

  [package.metadata.release]
  release = false

  # https://github.com/rustwasm/wasm-pack/issues/1247
  [package.metadata.wasm-pack.profile.release]
  wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ["http", "axum", "d1"] }
worker-macros = { version = "0.4.2", features = ["http"] }
axum = { version = "0.7", default-features = false, features = [
  "json",
  "macros",
] }
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
tower-http = { version = "0.6.2", features = ["cors", "auth"] }
serde = { version = "1.0.215", features = ["derive"] }
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["js"] }
rand = "0.8.5"
serde_json = "1.0.133"
chrono = "0.4.38"
anyhow = "1.0.93"
base64 = "0.22.1"
crypto_box = { version = "0.9.1", features = ["std", "seal", "salsa20"] }
typenum = "1.17.0"

# The Cloudflare Workers runtime appears to be broken for Rust 1.82. This is a
# workaround.
#
# https://github.com/cloudflare/workers-rs/issues/668
[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }
